fix: usar allowedOriginPatterns con wildcards para permitir todos los origenes